--- a/views/imageview.jade
+++ b/views/imageview.jade
@@ -1,8 +1,10 @@
 extends layout
 
 block content
-	.hero-unit
-		h1 uploaded file:
-		img(src='/uploads/#{imgname}')
-		br
-		a(href='/uploads/#{imgname}') Direct link
+	div.container.span10.offset2
+		.hero-unit
+			h1 uploaded file:
+			a(href='/uploads/#{imgname}', class='thumbnail')
+				img(src='/uploads/#{imgname}', width='260px',height='180px')
+			br
+			a(href='/uploads/#{imgname}') Direct link
