recent uploaded photos

--- a/views/imageview.jade
+++ b/views/imageview.jade
@@ -3,7 +3,7 @@ extends layout
 block content
 	div.container.span10.offset2
 		.hero-unit
-			h1 uploaded file:
+			h1 Uploaded Image
 			a(href='/uploads/#{imgname}', class='thumbnail')
 				img(src='/uploads/#{imgname}', width='260px',height='180px')
 			br
