--- a/views/header.jade
+++ b/views/header.jade
@@ -13,6 +13,9 @@ div.navbar.navbar-inverse.navbar-fixed-top
                         a(href="/")
                             | Home
                     li
+                        a(href="/recent")
+                            | Recent Uploads
+                    li
                         a(href="/about")
                             | About
                     li
