--- a/views/contact.jade
+++ b/views/contact.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	.container.span10.offset2
+	.container
 		.hero-unit
 			h1 Contact Us
 			p Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
