--- a/views/index.jade
+++ b/views/index.jade
@@ -1,18 +1,22 @@
 extends layout
 
 block content
-	div.container.span10.offset2
+	div.container
 		.hero-unit
 			.page-header
 				h1 Image Uploader
 			p Easily upload and share photos.
-			p Suspendisse ut eros nisl, eu malesuada libero. Sed venenatis, nibh ac viverra elementum, 
-				| quam erat viverra tellus, sed eleifend eros quam vitae neque. Quisque venenatis lacus dignissim turpis iaculis convallis. 
-				| Duis arcu elit, venenatis et feugiat eu, tincidunt ac justo. Sed vitae mi ligula. Nulla volutpat dolor 
-				| non ligula bibendum sollicitudin. Maecenas non massa ante. Sed ullamcorper mauris nec risus imperdiet vitae vestibulum urna blandit. 
 			
 			form(action='/upload',enctype='multipart/form-data', method='POST')
 				fieldset
-				legend Upload File
+					h2 Upload File
 					input(type='file',name='img')
-					input(type='submit',value='submit',class='btn btn-primary')
+					br
+					Image Tags (comma-seperated for multiple):
+					input(type='text',name='imgtags')
+					input(type='submit',value='Submit',class='btn btn-primary')
+
+			form(action='/search', method='POST')
+				h3 Search for Images by Tag
+				input(type='text',name='searchtags')
+				input(type='submit',value='Search',class='btn btn-primary')
