storing images in mongo now as buffers

--- a/views/404.jade
+++ b/views/404.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	.container.span10.offset2
+	.container
 		.hero-unit
 			h1 404
 			p Sorry! It seems we don't have what you are looking for.
