--- a/views/imageview.jade
+++ b/views/imageview.jade
@@ -4,10 +4,10 @@ block content
 	div.container
 		.hero-unit
 			h1 Uploaded Image
-			a(href='/uploads/#{img.path}', class='thumbnail')
-				img(src='/uploads/#{img.path}', width='260px',height='180px')
+			a(href='/uploads/#{img.urlName}', class='thumbnail')
+				img(src='data:#{img.img.contentType};base64,#{img.img.stringified}', width='260px',height='180px')
 			br
-			a(href='/uploads/#{img.path}') Direct link
+			a(href='/uploads/#{img.urlName}') Direct link
 			br
 			p Tags:
 			span(id='tags') #{img.tags}
